# email-collector

./: .env.example  .gitignore  README.md  ai_expense_analyzer.py  collect_expenses.py  email_backup.py  expense_launcher.py  mcp_email_server.py  merge_conversations.py  oauth_client.py  oauth_microsoft.py  pdf_amount_scraper.py  pyproject.toml  retrieve_conversation.py
